--- a/index.html
+++ b/index.html
@@ -324,8 +324,9 @@ setInterval('updateTimer()', 1000);
 								
 						</center>
 						<div id="timer" style="text-align: center;
-						padding: 90px 70px;
+						padding: 70px 50px;
 						font-family: sans-serif;
+						font-size: 3em;		       
 						font-weight: lighter;"></div>
 					</p> 
 						<center><p style="font-family: perpetua; font-size: 34px;"> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. <br>Capable of both inflicting injury, and remedying it. <br> - Albus Dumbledore</b></p></center>
