--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ setInterval('updateTimer()', 1000);
 							<div style="font-family: perpetua;" class="col-4 col-12-large">
 								<strong><p style="font-size: 36px;">FUTURUM EST MANIBUS</p></strong>
 							</div>
-							<p style="font-family: perpetua; font-size: 34px;">
+							<p style="font-family: perpetua; font-size: 5em;">
 								<strong>4<sup>th</sup>,  5<sup>th</sup> &  6<sup>th</sup>								
 									<br>August 2022</strong></p>
 								
@@ -326,7 +326,7 @@ setInterval('updateTimer()', 1000);
 						<div id="timer" style="text-align: center;
 						padding: 70px 50px;
 						font-family: sans-serif;
-						font-size: 3em;		       
+						font-size: 5em;		       
 						font-weight: lighter;"></div>
 					</p> 
 						<center><p style="font-family: perpetua; font-size: 34px;"> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. <br>Capable of both inflicting injury, and remedying it. <br> - Albus Dumbledore</b></p></center>
