--- a/index.html
+++ b/index.html
@@ -318,15 +318,14 @@ setInterval('updateTimer()', 1000);
 							<div style="font-family: perpetua;" class="col-4 col-12-large">
 								<strong><p style="font-size: 36px;">FUTURUM EST MANIBUS</p></strong>
 							</div>
-							<p style="font-family: perpetua; font-size: 5em;">
+							<p style="font-family: perpetua; font-size: 34px;">
 								<strong>4<sup>th</sup>,  5<sup>th</sup> &  6<sup>th</sup>								
 									<br>August 2022</strong></p>
 								
 						</center>
 						<div id="timer" style="text-align: center;
 						padding: 90px 70px;
-						font-family: sans-serif;
-						font-size: 5em;		       
+						font-family: sans-serif;	       
 						font-weight: lighter;"></div>
 					</p> 
 						<center><p style="font-family: perpetua; font-size: 34px;"> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. <br>Capable of both inflicting injury, and remedying it. <br> - Albus Dumbledore</b></p></center>
