--- a/index.html
+++ b/index.html
@@ -321,14 +321,14 @@ setInterval('updateTimer()', 1000);
 							<p style="font-family: perpetua; font-size: 34px;">
 								<strong>4<sup>th</sup>,  5<sup>th</sup> &  6<sup>th</sup>								
 									<br>August 2022</strong></p>
-							<header class="major">
+							<header class="major"></header>
 								
 						</center>
 						<div id="timer" style="text-align: center;
 						padding: 90px 70px;
 						font-family: sans-serif;	       
 						font-weight: lighter;"></div>
-							<header class="major">
+							<header class="major"></header>
 					</p> 
 						<center><p style="font-family: perpetua; font-size: 34px;"> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. <br>Capable of both inflicting injury, and remedying it. <br> - Albus Dumbledore</b></p></center>
 					</div>
