--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ setInterval('updateTimer()', 1000);
 				<section id="one" class="spotlight style1 bottom">
 					<div id="page-wrapper">
 					<div class="content">
+						<span class="image fit main"><img src="images/navybluegradient.jpg" alt="" /></span>
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
