--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ setInterval('updateTimer()', 1000);
 					<div id="page-wrapper">
 					<header class="major">
 						<h2>Secretary General of RNPSMUN 2022</h2>
-						<img src="images/dhruthiD.jpeg" style="border-radius: 50%; height: 20em; width: 20em;" alt="" /><p style="font-size: 1.5em;"> Dhruti Deshpande!</p><br>
+						<img src="images/dhruthiD.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);border-radius: 50%; height: 20em; width: 20em;" alt="" /><p style="font-size: 1.5em;"> Dhruti Deshpande!</p><br>
 					</header>
 					
 					<footer class="major">
@@ -410,7 +410,7 @@ setInterval('updateTimer()', 1000);
 				<div class="container">
 					<header class="major">
 						<h2>Director General of RNPSMUN 2022</h2>
-						<img src="images/VishalRao.jpeg" style="border-radius: 50%; height: 20em; width: 20em; " alt="" /><p style="font-size: 1.5em;">Vishal Rao</p><br>
+						<img src="images/VishalRao.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);border-radius: 50%; height: 20em; width: 20em; " alt="" /><p style="font-size: 1.5em;">Vishal Rao</p><br>
 					</header>
 					
 					<footer class="major">
