--- a/credits.html
+++ b/credits.html
@@ -83,7 +83,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/ara.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/ara.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em sans-serif;  color:white">HEAD OF TECH</h1>
 												<p style = "font: 2em perpetua; color: white;">Aravind Sreenath</p> 
@@ -95,7 +95,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/aniii copy 2.png" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/aniii copy 2.png" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<p style = "font: 2em perpetua; color: white;">Anirudh M</p> 
 											</p>
@@ -106,7 +106,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/parthK.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/parthK.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<p style = "font: 2em perpetua; color: white;">Parth K Dubal</p> 
 											</p>
@@ -117,7 +117,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/tarunK.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/tarunK.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<p style = "font: 2em perpetua; color: white;">Tarun K</p> 
 											</p>
@@ -128,7 +128,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/yashA.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/yashA.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<p style = "font: 2em perpetua; color: white;">Yash Aanand</p> 
 											</p>
