--- a/eb.html
+++ b/eb.html
@@ -82,7 +82,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/dhruthiD.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/dhruthiD.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">SECRETARY GENERAL</h1>
 												<p style = "font: 2em perpetua; color: white;">Dhruti Deshpande</p> 
@@ -94,7 +94,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/VishalRao.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/VishalRao.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">DIRECTOR GENERAL</h1>
 												<p style = "font: 2em perpetua; color: white;">Vishal A Rao</p> 
@@ -106,7 +106,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/maski.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/maski.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">CRISIS DIRECTOR</h1>
 											<p style = "font: 2em perpetua; color: white;">Vishal Maski</p>
@@ -118,7 +118,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/shambhavi.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/shambhavi.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF ORGANISING COMMITTEE</h1>
 												<p style = "font: 2em perpetua; color: white;">Shambhavi A Mustapure</p> 
@@ -130,7 +130,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/dhruthi.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/dhruthi.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF ORGANISING COMMITTEE</h1>
 												<p style = "font: 2em perpetua; color: white;">Dhruti Kedilaya</p> 
@@ -142,7 +142,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/akash.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/akash.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">MUN ADVISOR</h1>
 												<p style = "font: 2em perpetua; color: white;">Akash G C</p> 
