--- a/unhrc.html
+++ b/unhrc.html
@@ -111,7 +111,7 @@ equitable, just and sustainable society
 					<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/jatin.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/jatin.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO-CHAIR</h1>
 									<p style="font: 2em perpetua; color: white;">Jatin Jain</p> 
@@ -123,7 +123,7 @@ equitable, just and sustainable society
 			<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/muktha.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/muktha.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white"> CO-CHAIR</h1>
 										<p style="font: 2em perpetua; color: white;">Mukta Gangadhar</p> 
@@ -135,7 +135,7 @@ equitable, just and sustainable society
 					<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/diya.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/diya.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO-VICE-CHAIR</h1>
 										<p style="font: 2em perpetua; color: white;">Diya C Madhu</p> 
@@ -148,7 +148,7 @@ equitable, just and sustainable society
 						<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/she.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/she.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO-VICE-CHAIR</h1>
 										<p style="font: 2em perpetua; color: white;">Anvesha Girish</p> 
