--- a/contactus.html
+++ b/contactus.html
@@ -152,9 +152,9 @@
                                         <td> 
                                             rmun22.unem@gmail.com 
                                             <br> rmun22.unhrc@gmail.com 
-                                            <br> rmun22.ica@gmail.com 
+                                            <br> rmun22.ica1948@gmail.com
                                             <br> rmun22.fcc@gmail.com 
-                                                <br> rmun22.ipc@gmail.com     
+                                            <br> rmun22.ipc@gmail.com     
                 
                                         </td>
                                     </tr>
