--- a/fcc.html
+++ b/fcc.html
@@ -36,7 +36,7 @@
 						<li>
 							<a href="#">Delegate Materials</a>
 							<ul>
-								<li><a href="./assets/pdfs/DH.pdf">Delegate Handbook</a></li>
+								<li><a href="handbook.pdf">Delegate Handbook</a></li>
 								<li>
 									<a href="#">Background Guides</a>
 									<ul>
