--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ setInterval('updateTimer()', 1000);
 						<li>
 							<a href="#">Delegate Materials</a>
 							<ul>
-								<li><a href="./assets/pdfs/DH.pdf">Delegate Handbook</a></li>
+								<li><a href="handbook.pdf">Delegate Handbook</a></li>
 								<li>
 									<a href="#">Background Guides</a>
 									<ul>
