--- a/contactus.html
+++ b/contactus.html
@@ -76,7 +76,7 @@
                                 <!-- R-NPSMUN LOGO-->
                                 <div style="font-family: perpetua">
                                 <div class="inner" style="text-align: center">
-                                    <h2 style="font-size: 1.5em;">REACH OUT TO US !</h2>
+                                    <h2 style="font-size: 1.5em;">REACH OUT <br>TO US!</h2>
                                     <p>LOCATION</p>
                 
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.800160001107!2d77.54726531482214!3d12.984629990847324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3ded9e74da8b%3A0x3a8b1229b9c21b18!2sNational+Public+School+RNR!5e0!3m2!1sen!2sin!4v1531671589309"
