--- a/unem.html
+++ b/unem.html
@@ -56,7 +56,7 @@
 						<li><a href="credits.html">Tech Team</a></li>
 						<li><a href="#" class="button primary">REGISTRATION</a><ul>
 							<li><a href="#">REGISTRATION </a></li>
-							<li><a href="#">REGISTRATION FOR NPS-RNR</a></li>
+							<li><a href="https://forms.gle/zXX3QyLETL6Kp2MTA">REGISTRATION FOR NPS-RNR</a></li>
 						</ul></li>
 					</ul>
 				</nav>
