--- a/fcc.html
+++ b/fcc.html
@@ -55,7 +55,7 @@
 						<li><a href="contactus.html">Contact Us</a></li>
 						<li><a href="credits.html">Tech Team</a></li>
 						<li><a href="#" class="button primary">REGISTRATION</a><ul>
-							<li><a href="#">REGISTRATION </a></li>
+							<li><a href="https://forms.gle/bPAUwNtGhp71x71J9">REGISTRATION </a></li>
 							<li><a href="https://forms.gle/zXX3QyLETL6Kp2MTA">REGISTRATION FOR NPS-RNR</a></li>
 						</ul></li>
 					</ul>
