--- a/unhrc.html
+++ b/unhrc.html
@@ -91,7 +91,7 @@ equitable, just and sustainable society
 					<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
-						Safeguarding the rights and interests of marginalised communities
+						Safeguarding the Rights and Interests of Marginalised Communities with Special Reference to Freedom of Speech
 					</p>
 
 								</div>
