It's a utopia, not an utopia

--- a/ica.html
+++ b/ica.html
@@ -81,7 +81,7 @@
 						<b>-Vishnu Purana</b>
 					</p>
 					<p style="font-size: 1.15em">
-						It is the year 1948. Bharat has just “awoken to life and freedom.” But independence is just the first step. There is still a long way to go before we truly become the nation our ancestors envisioned. Drafting the constitution is one essential step in the right direction to becoming a unified nation and reclaiming our glorious history. So, delegates! It is now in your hands to decide the fate of Bharat, and live up to the expectations of our predecessors while also securing a country for the generations to come.
+						It is the year 1948. Bharat has just “awoken to life and freedom.” But independence is just the first step. There is still a long way to go before we truly become the nation our ancestors envisioned. Drafting the constitution is one essential step in the right direction to becoming a unified nation and reclaiming our glorious history. So, delegates! It is now in your hands to decide the fate of Bharat, and live up to the expectations of our predecessors while also securing a utopian country for the generations to come.
 
 					</p>
 									
