--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@ setInterval('updateTimer()', 1000);
 								<li>
 									<a href="#">Background Guides</a>
 									<ul>
-										<li><a href="unem.html">UNEM </a></li>
-										<li><a href="unhrc.html">UNHRC</a></li>
-										<li><a href="ica.html">ICA</a></li>
-										<li><a href="fcc.html">FCC</a></li>
-										<li><a href="ipc.html">IPC</a></li>
+										<li><a href="https://drive.google.com/file/d/1EGiBH9yLOG2MdNMBcZVotTdCHTo6i_Hg/view?usp=sharing">UNEM </a></li>
+										<li><a href="https://drive.google.com/file/d/1zjYJ-tpPx_MIeCN25_BwfdRHVGLPoGZ9/view?usp=sharing">UNHRC</a></li>
+										<li><a href="ihttps://drive.google.com/file/d/1iUU7H640OgPSrUdKVoYIEszHMQ4H8tA0/view?usp=sharing">ICA</a></li>
+										<li><a href="https://drive.google.com/file/d/1N6JJAeZ6GZX0CqS6rA8Ac1MyLOQFSLOS/view?usp=sharing">FCC</a></li>
+										<li><a href="https://drive.google.com/file/d/1tzyTvPE8NAQ6luA3CaBycYudWWcqHkct/view?usp=sharing">IPC</a></li>
 									</ul>
 								</li>
 								<li>
