--- a/ipc.html
+++ b/ipc.html
@@ -75,10 +75,10 @@
 								<div style="text-align: center;">
 									<h2>International Press Corps</h2>
 					<p style="font-size: 1.25em">
-						<b>“The First Law of Journalism: to confirm existing prejudice, rather than contradict it”</b>
+						<b>“The first essence of journalism is to know what you want to know, the second, is to find out who will tell you. ”</b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>-Alexander Cockburn</b>
+                                            <b>-John Gunther</b>
 					</p>
 					<p style="font-size: 1.15em">
 						The international press committee is designed to represent journalists and the media. The IPC's agenda for
