--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ setInterval('updateTimer()', 1000);
 									<a href="#">Background Guides</a>
 									<ul>
 										<li><a href="https://drive.google.com/file/d/1dSB5s6bvmgHJdtSKLXhbBGaRO3WUw42b/view?usp=sharing">UNEM </a></li>
-										<li><a href="https://drive.google.com/file/d/1zjYJ-tpPx_MIeCN25_BwfdRHVGLPoGZ9/view?usp=sharing">UNHRC</a></li>
+										<li><a href="https://drive.google.com/file/d/1Zw9EJjP9eq-zD7YSrdO79TulWtsFjnCP/view?usp=drivesdk">UNHRC</a></li>
 										<li><a href="https://drive.google.com/file/d/1iUU7H640OgPSrUdKVoYIEszHMQ4H8tA0/view?usp=sharing">ICA</a></li>
 										<li><a href="https://drive.google.com/file/d/1N6JJAeZ6GZX0CqS6rA8Ac1MyLOQFSLOS/view?usp=sharing">FCC</a></li>
 										<li><a href="https://drive.google.com/file/d/1tzyTvPE8NAQ6luA3CaBycYudWWcqHkct/view?usp=sharing">IPC</a></li>
