--- a/eb.html
+++ b/eb.html
@@ -25,11 +25,11 @@
 						<li>
 							<a href="#">Committees</a>
 							<ul>
-								<li><a href="unem.html">UNEM </a></li>
-								<li><a href="unhrc.html">UNHRC</a></li>
-								<li><a href="ica.html">ICA</a></li>
-								<li><a href="fcc.html">FCC</a></li>
-								<li><a href="ipc.html">IPC</a></li>
+								<li><a href="https://drive.google.com/file/d/1dSB5s6bvmgHJdtSKLXhbBGaRO3WUw42b/view?usp=sharing">UNEM </a></li>
+								<li><a href="https://drive.google.com/file/d/1Zw9EJjP9eq-zD7YSrdO79TulWtsFjnCP/view?usp=drivesdk">UNHRC</a></li>
+								<li><a href="https://drive.google.com/file/d/1iUU7H640OgPSrUdKVoYIEszHMQ4H8tA0/view?usp=sharing">ICA</a></li>
+								<li><a href="https://drive.google.com/file/d/1N6JJAeZ6GZX0CqS6rA8Ac1MyLOQFSLOS/view?usp=sharing">FCC</a></li>
+								<li><a href="https://drive.google.com/file/d/1tzyTvPE8NAQ6luA3CaBycYudWWcqHkct/view?usp=sharing">IPC</a></li>
 							</ul>
 						</li>
 						<li><a href="eb.html">Secretariat</a></li>
