--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@ setInterval('updateTimer()', 1000);
 		  width: 100%;
 		  height: 100%; 
 		  overflow: auto; 
-		  background-color: rgb(0,0,0); 
-		  background-color: rgba(0,0,0,0.4); 
+		  background-color: rgb(0, 0, 0); 
+		  background-color: rgba(0,0,0,0); 
 		}
 		
 		.modal-content {
 		  position: relative;
-		  background-image: linear-gradient(to right, rgb(12, 0, 81, 1), rgb(0, 0, 0, 1));
+		  background-image: linear-gradient(to right, #640404, rgb(0, 0, 0, 1));
 		  margin: auto;
 		  padding: 0;
 		  border: 1px solid #888;
 		  width: 80%;
-		  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+		  box-shadow: 0 4px 8px 0 #640404,0 6px 20px 0 rgba(0,0,0,0.19);
 		  -webkit-animation-name: animatetop;
 		  -webkit-animation-duration: 0.4s;
 		  animation-name: animatetop;
@@ -161,7 +161,7 @@ setInterval('updateTimer()', 1000);
 		
 		.modal-header {
 		  padding: 2px 16px;
-		  background-image: linear-gradient(to right, rgb(9, 50, 122, 1), rgb(37, 43, 87, 1));
+		  background-image: linear-gradient(to right, #640404, #7d0404);
 		  color: white;
 		}
 		
@@ -169,7 +169,7 @@ setInterval('updateTimer()', 1000);
 		
 		.modal-footer {
 		  padding: 2px 16px;
-		  background-image: linear-gradient(to right, rgb(9, 50, 122), rgb(37, 43, 87, 1));
+		  background-image: linear-gradient(to right, #640404, #7d0404);
 		  color: white;
 		}
 		.tablecontainer th h1 {
@@ -205,16 +205,15 @@ setInterval('updateTimer()', 1000);
 
 	/* Background-color of the odd rows */
 	.tablecontainer tr:nth-child(odd) {
-		background-color: #323C50;
-	}
+		background-color: #7d0404;
 
 	/* Background-color of the even rows */
 	.tablecontainer tr:nth-child(even) {
-		background-color: #2C3446;
+		background-color: #7d0404;
 	}
 
 	.tablecontainer th {
-		background-color: #1F2739;
+		background-color: #7d0404;
 	}
 
 	.tablecontainer td:first-child {
@@ -331,7 +330,7 @@ setInterval('updateTimer()', 1000);
 				<section id="one" class="spotlight style1 bottom">
 					<div id="page-wrapper">
 					<div class="content">
-						<span class="image fit main"><img src="images/navybluegradient.jpg" alt="" /></span>
+						<span class="image fit main" style="background-image: linear-gradient(to right, #640404, #7d0404);"></span>
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
