--- a/index.html
+++ b/index.html
@@ -306,12 +306,12 @@ setInterval('updateTimer()', 1000);
 							Just apps. Lots of mother flipping apps.</p>
 						</header> -->
 						<center>
-							<span class="image"><img src="logo.png" alt=""/></span><br><br>
+							<span class="image"></span><br><br>
 							<div style="font-family: perpetua;" class="col-4 col-12-large">
 								<strong><p style="font-size: 36px;">FUTURUM EST MANIBUS</p></strong>
 							</div>
 							<p style="font-family: perpetua; font-size: 34px;">
-								<strong>25<sup>th</sup>,  26<sup>th</sup> &  27<sup>th</sup>								
+								<strong>27<sup>th</sup>,  28<sup>th</sup> &  29<sup>th</sup>								
 									<br>June 2023</strong></p>
 							
 								
@@ -330,7 +330,7 @@ setInterval('updateTimer()', 1000);
 				<section id="one" class="spotlight style1 bottom">
 					<div id="page-wrapper">
 					<div class="content">
-						<span class="image fit main" style="background-image: linear-gradient(to right, #640404, #7d0404);"></span>
+						<span class="image fit main" style="background-image: linear-gradient(to right, #640404, #7d0404) ;"></span>
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
@@ -431,6 +431,56 @@ setInterval('updateTimer()', 1000);
 				</div>
 				<a href="#three" class="goto-next scrolly">Next</a>
 			</section><hr><hr>
+			<!-- Four -->
+			<section id="five" class="wrapper style1 special fade-up">
+				<div class="container">
+					<header class="major">
+						<h2>The Committees</h2>
+						<p>Five Committees, Riveting and Thrilling</p>
+					</header>
+					<section class="features">
+					<table>
+						<tbody>
+						<tr>
+						<a href='unem.html'>
+							<div style="border-radius: 100%; text-align: center">
+								<img src="./images/comlog/unem.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+								<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
+									href='unem.html'>United Nations Emergency Meeting</h1>
+							</div>
+						</a><br>
+						<a href='unhrc.html'>
+							<div style="border-radius: 100%; text-align: center">
+								<img src="./images/comlog/unhrc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+								<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
+									href='unhrc.html'>United Nations Human Rights Council</h1>
+							</div>
+						</a><br>
+						<a href='ica.html'>
+								<div style="border-radius: 100%; text-align: center">
+									<img src="./images/ipa.png.png" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
+										href='aippm.html'>Indian Constituent Assembly of 1948</h1>
+								</div>
+						</a><br>
+						<a href='fcc.html'>
+							<div style="border-radius: 100%; text-align: center">
+								<img src="./images/comlog/fcc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+								<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
+									href='fcc.html'>Futuristic Crisis Committee</h1>
+							</div>
+						</a><br>
+						<a href='ipc.html'>
+								<div style="border-radius: 100%; text-align: center">
+									<img src="./images/comlog/ipc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
+										href='ipc.html'>International Press Corps</h1>
+								</div>
+						</a><br>
+					</tr></tbody></table>
+				</div>
+			</section>
+		</div>
 			<!-- Three -->
 				<section id="four">
 					<div id="main" class="wrapper style1">
@@ -538,56 +588,7 @@ setInterval('updateTimer()', 1000);
 					<a href="#five" class="goto-next scrolly">Next</a>
 				</section><hr><hr>
 
-			<!-- Four -->
-				<section id="five" class="wrapper style1 special fade-up">
-					<div class="container">
-						<header class="major">
-							<h2>The Committees</h2>
-							<p>Five Committees, Riveting and Thrilling</p>
-						</header>
-						<section class="features">
-						<table>
-							<tbody>
-							<tr>
-							<a href='unem.html'>
-								<div style="border-radius: 100%; text-align: center">
-									<img src="./images/comlog/unem.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
-									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-										href='unem.html'>United Nations Emergency Meeting</h1>
-								</div>
-							</a><br>
-							<a href='unhrc.html'>
-								<div style="border-radius: 100%; text-align: center">
-									<img src="./images/comlog/unhrc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
-									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-										href='unhrc.html'>United Nations Human Rights Council</h1>
-								</div>
-							</a><br>
-							<a href='ica.html'>
-									<div style="border-radius: 100%; text-align: center">
-										<img src="./images/ipa.png.png" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
-										<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-											href='aippm.html'>Indian Constituent Assembly of 1948</h1>
-									</div>
-							</a><br>
-							<a href='fcc.html'>
-								<div style="border-radius: 100%; text-align: center">
-									<img src="./images/comlog/fcc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
-									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-										href='fcc.html'>Futuristic Crisis Committee</h1>
-								</div>
-							</a><br>
-							<a href='ipc.html'>
-									<div style="border-radius: 100%; text-align: center">
-										<img src="./images/comlog/ipc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
-										<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-											href='ipc.html'>International Press Corps</h1>
-									</div>
-							</a><br>
-						</tr></tbody></table>
-					</div>
-				</section>
-			</div>
+		
 
 			<!-- Footer -->
 			<footer id="footer">
