contact us and banner

--- a/contactus.html
+++ b/contactus.html
@@ -44,11 +44,11 @@
                                         <li>
                                             <a href="#">Background Guides</a>
                                             <ul>
-                                                <li><a href="unem.html">UNEM </a></li>
-                                                <li><a href="unhrc.html">UNHRC</a></li>
-                                                <li><a href="ica.html">ICA</a></li>
-                                                <li><a href="fcc.html">FCC</a></li>
-                                                <li><a href="ipc.html">IPC</a></li>
+                                                <li><a href="unsc.html">UNSC </a></li>
+								                <li><a href="unhrc.html">UNHRC</a></li>
+								                <li><a href="loksabha.html">Lok Sabha</a></li>
+								                <li><a href="disec.html">DISEC</a></li>
+								                <li><a href="ipc.html">IPC</a></li>
                                             </ul>
                                         </li>
                                         <li>
@@ -95,20 +95,20 @@
                                     </tr>
                                     <tr style="text-align: justify">
                                             <td> SECRETARY GENERAL</td>
-                                            <td> DHRUTI DESHPANDE</td>
-                                            <TD>+91 6366 942 378</TD>
+                                            <td> DHRUTI KEDILAYA</td>
+                                            <TD>+91 75068 83733</TD>
                                         </tr>
                                         <tr style="text-align: justify">
                                                 <td>DIRECTOR GENERAL</td>
-                                                <td> VISHAL A RAO </td>
-                                                <TD>+91 76249 45291</TD>
+                                                <td> ANIRUDH M </td>
+                                                <TD>+91 80746 32214</TD>
                                             </tr>
                                     <tr style="text-align: justify">
                                         <td>HEAD OF ORGANISING COMMITTEE</td>
-                                        <td>SHAMBHAVI A MUSTAPURE<BR>
-                                                <BR>DHRUTI KEDILAYA
+                                        <td>RAAGHAV RATHI<BR>
+                                                <BR>DIYA C MADHU
                                         </td>						
-                                        <TD>+91 95354 64786 <BR><BR>+91 75068 83733</a> </TD>
+                                        <TD>+91 91086 31491 <BR><BR>+91 78927 70734</a> </TD>
                                         
                                         </td>
                                     </tr>
@@ -130,7 +130,7 @@
                                     <tr style="text-align: justify">
                                         <td>OFFICIAL MUN EMAIL</td>
                                         <td></td>
-                                        <td>rnpsmun2022@gmail.com</td>
+                                        <td>rnpsmun2023@gmail.com</td>
                                     </tr>
                 
                                     <tr style="text-align: justify">
@@ -174,7 +174,7 @@
                             <footer id="footer">
                                 <ul class="icons">
                                     <li><a href="https://www.instagram.com/rnpsmun2022/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-                                    <li><a href="mailto:rnpsmun2022@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+                                    <li><a href="mailto:rnpsmun2023@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
                                     <li><a href="tel:08023350361" class="icon solid alt fa-phone"><span class="label">Phone</span></a></li>
                                     <!--<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
                                     <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
