--- a/disec.html
+++ b/disec.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2022-UNEM</title>
-		<link rel="icon" type="image/x-icon" href="./images/comlog/unem.jpg">
+		<title>RNPSMUN 2022-FCC</title>
+		<link rel="icon" type="image/x-icon" href="./images/comlog/fcc.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-			<header id="header">
+            <header id="header">
                 <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
                 <nav id="nav">
 					<ul>
@@ -25,11 +25,11 @@
 						<li>
 							<a href="#">Committees</a>
 							<ul>
-								<li><a href="unem.html">UNEM </a></li>
+								<li><a href="unsc.html">UNSC </a></li>
 								<li><a href="unhrc.html">UNHRC</a></li>
-								<li><a href="ica.html">ICA</a></li>
-								<li><a href="fcc.html">FCC</a></li>
-								<li><a href="ipc.html">IPC</a></li>
+								<li><a href="loksabha.html">Lok Sabha</a></li>
+								<li><a href="disec.html">DISEC</a></li>
+								 <li><a href="ipc.html">IPC</a></li>
 							</ul>
 						</li>
 						<li><a href="eb.html">Secretariat</a></li>
@@ -66,35 +66,33 @@
 				<div style="font-family: perpetua;" id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
-						<span class="image"><img src="./images/comlog/unem.jpg" alt="" style="border-radius: 50%; width: 18em; height: 18em; border: 2px solid gold !important;"/></span>
+						<span class="image"><img src="./images/comlog/fcc.jpg" alt="" style="border-radius: 50%; width: 18em; height: 18em; border: 2px solid gold !important;"/></span>
 					</div>
 						<header class="major">
 						</header>
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>United Nations Emergency Meeting</h2>
-					<p style="font-size: 1.25em">
-						<b>“The World will not be destroyed by those who do evil, but by those who watch them without doing anything”</b>
+									<h2 style="font: perpetua">Sonnenburg Summit (FCC)</h2>
+					<p style="font: 1.25em perpetua">
+						<b>"It is not heroes that make history but history that makes heroes"</b>
 					</p>
-					<p style="font-size: 1.25em;">
-						<b>-Albert Einstein</b>
+					<p style="font: 1.25em perpetua;">
+
+						<b>-Stalin</b>
 					</p>
-					<p style="font-size: 1.15em">
-Subsequent to the Russian military attack on Ukraine on the 24th of February 2022, the conflict has grown
-manifold and impacted all citizens, directly or indirectly, across the globe. Global Food Security is
-threatened and crude oil prices are spiking worldwide, crippling the economies of rich and poor countries.
-With each of these countries keen on its motive, tensions have reached an all-time high on the Eastern
-front of Europe.
-Can the world community stop the conflict before it leads to World War III? What can be done to prevent
-and punish war crimes?
-					</p>
+					<p style="font: 1.15em perpetua">
+						A committee consisting of the most substantial powers in the past two decades come together in 2035 to address
+the anonymous message that threatens to release a potent bioweapon upon the world. With an urgent need
+to put aside their post-war differences after years of global political unrest, will the countries find the
+strength to unite when faced with the consequences of the dark side of science?
+</p>
 					<header class="major">
 						</header>
 									<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
-						Russia Ukraine crisis 
+						Bio-weaponry in the new socio-political climate
 					</p>
 
 								</div>
@@ -103,51 +101,46 @@ and punish war crimes?
 					</div>
 				</div>
 
-			<section class="features">
-	<article >
+			<section class="features" style="text-transform: capitalize" >
+	
+					<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/maski.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/neha.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
-									<p style = "font: 2em perpetua; color:white">Vishal Maski</p> 
-								</p>
-							</div>
-						</a>
-
-					</article>
-
-						<article >
-						<a >
-							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/protein.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
-								<p>
-									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
-
-									<p style = "font: 2em perpetua; color:white">Rishabh Shetty</p> 
+									<h1 style="font: 1em perpetua;  color:white">CHAIR</h1>
+									<p style = "font: 2em perpetua; color:white" >Neha D Hemadri</p> 
 
 								</p>
 							</div>
 						</a>
 
 					</article>
-		
-		<article >
-						<a >
-							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/maanya.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
-								<p>
-									<h1 style="font: 1em perpetua;;  color:white">MODERATOR</h1>
-									<p style = "font: 2em perpetua; color:white">Maanya H</p> 
-								</p>
-							</div>
-						</a>
+					<article>
+							<a >
+								<div style="border-radius: 100%; text-align: center ; size: 50%">
+									<img src="./images/smr.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<p>
+										<h1 style="font: 1em perpetua; color:white">CO - VICE CHAIR</h1>
+										<p style = "font: 2em perpetua; color:white">Smrithi Shenoy</p> 
+									</p>
+								</div>
+							</a>
 
-					</article>
+						</article>
 
+						<article>
+							<a >
+								<div style="border-radius: 100%; text-align: center ; size: 50%">
+									<img src="./images/nikil.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<p>
+										<h1 style="font: 1em perpetua; color:white">CO - VICE CHAIR</h1>
+										<p style = "font: 2em perpetua; color:white">Nikhil Athreya P</p> 
+									</p>
+								</div>
+							</a>
 
-
-			
+						</article>
 			<!-- Footer -->
             <footer id="footer">
                 <ul class="icons">
@@ -181,4 +174,3 @@ and punish war crimes?
 			<script src="assets/js/main.js"></script>
 
 	</body>
-</html>
