--- a/eb.html
+++ b/eb.html
@@ -40,11 +40,11 @@
 								<li>
 									<a href="#">Background Guides</a>
 									<ul>
-										<li><a href="unem.html">UNEM </a></li>
-										<li><a href="unhrc.html">UNHRC</a></li>
-										<li><a href="ica.html">ICA</a></li>
-										<li><a href="fcc.html">FCC</a></li>
-										<li><a href="ipc.html">IPC</a></li>
+										<li><a href="unsc.html">UNSC </a></li>
+								        <li><a href="unhrc.html">UNHRC</a></li>
+								        <li><a href="loksabha.html">Lok Sabha</a></li>
+								        <li><a href="disec.html">DISEC</a></li>
+								        <li><a href="ipc.html">IPC</a></li>
 									</ul>
 								</li>
 								<li>
