--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ setInterval('updateTimer()', 1000);
 						font-weight: lighter;"></div>
 					
 					</p> 
-						<center><p style="font-family: perpetua; font-size: 34px;"> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. <br>Capable of both inflicting injury, and remedying it. <br> - Albus Dumbledore</b></p></center>
+						<center><p style="font-family: perpetua; font-size: 34px;"> <b> The greatest glory in living lies not in never falling, but in rising every time we fall.  <br> - Nelson Mandela</b></p></center>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
