--- a/eb.html
+++ b/eb.html
@@ -75,10 +75,10 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/dhruthiD.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/dhruthi.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">SECRETARY GENERAL</h1>
-												<p style = "font: 2em perpetua; color: white;">Dhruti Deshpande</p> 
+												<p style = "font: 2em perpetua; color: white;">Dhruti Kedilaya</p> 
 											</p>
 										</div>
 									</a>
@@ -90,7 +90,7 @@
 											<img src="./images/VishalRao.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">DIRECTOR GENERAL</h1>
-												<p style = "font: 2em perpetua; color: white;">Vishal A Rao</p> 
+												<p style = "font: 2em perpetua; color: white;">Anirudh M</p> 
 											</p>
 										</div>
 									</a>
@@ -114,7 +114,7 @@
 											<img src="./images/shambhavi.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF ORGANISING COMMITTEE</h1>
-												<p style = "font: 2em perpetua; color: white;">Shambhavi A Mustapure</p> 
+												<p style = "font: 2em perpetua; color: white;">Raaghav Rathi</p> 
 											</p>
 										</div>
 									</a>
@@ -126,7 +126,7 @@
 											<img src="./images/dhruthi.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF ORGANISING COMMITTEE</h1>
-												<p style = "font: 2em perpetua; color: white;">Dhruti Kedilaya</p> 
+												<p style = "font: 2em perpetua; color: white;">Diya C Madhu</p> 
 											</p>
 										</div>
 									</a>
