--- a/eb.html
+++ b/eb.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2022</title>
-		<link rel="icon" type="image/x-icon" href="logo.png">
+		<title>RNPSMUN 2023</title>
+		<link rel="icon" type="image/x-icon" href="images/logo 2023.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,11 +25,11 @@
 						<li>
 							<a href="#">Committees</a>
 							<ul>
-								<li><a href="https://drive.google.com/file/d/1dSB5s6bvmgHJdtSKLXhbBGaRO3WUw42b/view?usp=sharing">UNEM </a></li>
-								<li><a href="https://drive.google.com/file/d/1Zw9EJjP9eq-zD7YSrdO79TulWtsFjnCP/view?usp=drivesdk">UNHRC</a></li>
-								<li><a href="https://drive.google.com/file/d/1iUU7H640OgPSrUdKVoYIEszHMQ4H8tA0/view?usp=sharing">ICA</a></li>
-								<li><a href="https://drive.google.com/file/d/1N6JJAeZ6GZX0CqS6rA8Ac1MyLOQFSLOS/view?usp=sharing">FCC</a></li>
-								<li><a href="https://drive.google.com/file/d/1tzyTvPE8NAQ6luA3CaBycYudWWcqHkct/view?usp=sharing">IPC</a></li>
+								<li><a href="unsc.html">UNSC </a></li>
+								        <li><a href="unhrc.html">UNHRC</a></li>
+								        <li><a href="loksabha.html">Lok Sabha</a></li>
+								        <li><a href="disec.html">DISEC</a></li>
+								        <li><a href="ipc.html">IPC</a></li>
 							</ul>
 						</li>
 						<li><a href="eb.html">Secretariat</a></li>
@@ -40,11 +40,11 @@
 								<li>
 									<a href="#">Background Guides</a>
 									<ul>
-										<li><a href="unsc.html">UNSC </a></li>
-								        <li><a href="unhrc.html">UNHRC</a></li>
-								        <li><a href="loksabha.html">Lok Sabha</a></li>
-								        <li><a href="disec.html">DISEC</a></li>
-								        <li><a href="ipc.html">IPC</a></li>
+										<li><a href="https://drive.google.com/file/d/1dSB5s6bvmgHJdtSKLXhbBGaRO3WUw42b/view?usp=sharing">UNSC </a></li>
+										<li><a href="https://drive.google.com/file/d/1Zw9EJjP9eq-zD7YSrdO79TulWtsFjnCP/view?usp=drivesdk">UNHRC</a></li>
+										<li><a href="https://drive.google.com/file/d/1iUU7H640OgPSrUdKVoYIEszHMQ4H8tA0/view?usp=sharing">Lok Sabha</a></li>
+										<li><a href="https://drive.google.com/file/d/1N6JJAeZ6GZX0CqS6rA8Ac1MyLOQFSLOS/view?usp=sharing">DISEC</a></li>
+										<li><a href="https://drive.google.com/file/d/1tzyTvPE8NAQ6luA3CaBycYudWWcqHkct/view?usp=sharing">IPC</a></li>
 									</ul>
 								</li>
 								<li>
