--- a/unsc.html
+++ b/unsc.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2022-UNEM</title>
-		<link rel="icon" type="image/x-icon" href="./images/comlog/unem.jpg">
+		<title>RNPSMUN 2023-UNSC</title>
+		<link rel="icon" type="image/x-icon" href="images/logo 2023.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
