--- a/eb.html
+++ b/eb.html
@@ -48,7 +48,7 @@
 									</ul>
 								</li>
 								<li>
-									<a href="https://drive.google.com/drive/folders/1tyUwYpaTY_qCci--hdzHNSALRdLwysgN">Matrix</a>
+									<a href="https://drive.google.com/drive/u/1/folders/1V2zTnMqBSRimD45uQV40Ldeu9UmN6hj6">Matrix</a>
 								</li>
 							</ul>
 						</li>
@@ -62,10 +62,10 @@
 				</nav>
             </header>
 			<!-- Main -->
-				<div id="main" class="wrapper style1" style="font-family: perpetua;">
+				<div id="banner" class="wrapper style1" style="font-family: perpetua;">
 					<div class="container">
+						
 						<header class="major">
-							<center><a href="#" class="image fit"><img src="logo.png" style="border-radius: 50%; width: 20em; height: 20em; border: 2px solid rgb(255, 255, 255) !important;" alt=""/></a></center>
 							<h2>SECRETARIAT</h2>
 						</header>
 
