--- a/ipc.html
+++ b/ipc.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2022-IPC</title>
-		<link rel="icon" type="image/x-icon" href="./images/comlog/ipc.jpg">
+		<title>RNPSMUN 2023-IPC</title>
+		<link rel="icon" type="image/x-icon" href="images/logo 2023.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,10 +25,10 @@
 						<li>
 							<a href="#">Committees</a>
 							<ul>
-								<li><a href="unem.html">UNEM </a></li>
+								<li><a href="unsc.html">UNSC </a></li>
 								<li><a href="unhrc.html">UNHRC</a></li>
-								<li><a href="ica.html">ICA</a></li>
-								<li><a href="fcc.html">FCC</a></li>
+								<li><a href="loksabha.html">Lok Sabha</a></li>
+								<li><a href="disec.html">DISEC</a></li>
 								<li><a href="ipc.html">IPC</a></li>
 							</ul>
 						</li>
@@ -48,7 +48,7 @@
 									</ul>
 								</li>
 								<li>
-									<a href="https://drive.google.com/drive/folders/1tyUwYpaTY_qCci--hdzHNSALRdLwysgN">Matrix</a>
+									<a href="https://drive.google.com/drive/u/1/folders/1V2zTnMqBSRimD45uQV40Ldeu9UmN6hj6">Matrix</a>
 								</li>
 							</ul>
 						</li>
