--- a/loksabha.html
+++ b/loksabha.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2022-ICA</title>
-		<link rel="icon" type="image/x-icon" href="./images/ipa.png.png">
+		<title>RNPSMUN 2023-IPC</title>
+		<link rel="icon" type="image/x-icon" href="images/logo 2023.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,7 +48,7 @@
 									</ul>
 								</li>
 								<li>
-									<a href="https://drive.google.com/drive/folders/1tyUwYpaTY_qCci--hdzHNSALRdLwysgN">Matrix</a>
+									<a href="https://drive.google.com/drive/u/1/folders/1V2zTnMqBSRimD45uQV40Ldeu9UmN6hj6">Matrix</a>
 								</li>
 							</ul>
 						</li>
