--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
         <title>RNPSMUN 2023</title>
-        <link rel="icon" type="image/x-icon" href="logo.png">
+		<link rel="icon" type="image/x-icon" href="images/logo 2023.png">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
@@ -29,11 +29,11 @@
                                 <li>
                                     <a href="#">Committees</a>
                                     <ul>
-										<li><a href="https://drive.google.com/file/d/1dSB5s6bvmgHJdtSKLXhbBGaRO3WUw42b/view?usp=sharing">UNEM </a></li>
-										<li><a href="https://drive.google.com/file/d/1Zw9EJjP9eq-zD7YSrdO79TulWtsFjnCP/view?usp=drivesdk">UNHRC</a></li>
-										<li><a href="https://drive.google.com/file/d/1iUU7H640OgPSrUdKVoYIEszHMQ4H8tA0/view?usp=sharing">ICA</a></li>
-										<li><a href="https://drive.google.com/file/d/1N6JJAeZ6GZX0CqS6rA8Ac1MyLOQFSLOS/view?usp=sharing">FCC</a></li>
-										<li><a href="https://drive.google.com/file/d/1tzyTvPE8NAQ6luA3CaBycYudWWcqHkct/view?usp=sharing">IPC</a></li>
+										<li><a href="unsc.html">UNSC </a></li>
+								        <li><a href="unhrc.html">UNHRC</a></li>
+								        <li><a href="loksabha.html">Lok Sabha</a></li>
+								        <li><a href="disec.html">DISEC</a></li>
+								        <li><a href="ipc.html">IPC</a></li>
 									</ul>
                                 </li>
                                 <li><a href="eb.html">Secretariat</a></li>
@@ -44,15 +44,15 @@
                                         <li>
                                             <a href="#">Background Guides</a>
                                             <ul>
-                                                <li><a href="unsc.html">UNSC </a></li>
-								                <li><a href="unhrc.html">UNHRC</a></li>
-								                <li><a href="loksabha.html">Lok Sabha</a></li>
-								                <li><a href="disec.html">DISEC</a></li>
-								                <li><a href="ipc.html">IPC</a></li>
+                                                <li><a href="https://drive.google.com/file/d/1dSB5s6bvmgHJdtSKLXhbBGaRO3WUw42b/view?usp=sharing">UNSC </a></li>
+										        <li><a href="https://drive.google.com/file/d/1Zw9EJjP9eq-zD7YSrdO79TulWtsFjnCP/view?usp=drivesdk">UNHRC</a></li>
+										        <li><a href="https://drive.google.com/file/d/1iUU7H640OgPSrUdKVoYIEszHMQ4H8tA0/view?usp=sharing">Lok Sabha</a></li>
+										        <li><a href="https://drive.google.com/file/d/1N6JJAeZ6GZX0CqS6rA8Ac1MyLOQFSLOS/view?usp=sharing">DISEC</a></li>
+										        <li><a href="https://drive.google.com/file/d/1tzyTvPE8NAQ6luA3CaBycYudWWcqHkct/view?usp=sharing">IPC</a></li>
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="https://drive.google.com/drive/folders/1tyUwYpaTY_qCci--hdzHNSALRdLwysgN">Matrix</a>
+                                            <a href="https://drive.google.com/drive/u/1/folders/1V2zTnMqBSRimD45uQV40Ldeu9UmN6hj6">Matrix</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -136,18 +136,18 @@
                                     <tr style="text-align: justify">
                                         <td>COMMITTEES</td>
                                         <td>
-                                            UNEM <br>
+                                            UNSC <br>
                                             UNHRC <br>
-                                            ICA <br>
-                                            FCC <br>
+                                            Lok Sabha <br>
+                                            DISEC <br>
                                             IPC 
                                         </td>
                                         <td> 
-                                            rmun22.unem@gmail.com 
-                                            <br> rmun22.unhrc@gmail.com 
-                                            <br> rmun22.ica1948@gmail.com
-                                            <br> rmun22.fcc@gmail.com 
-                                            <br> rmun22.ipc@gmail.com     
+                                            rmun23.unsc@gmail.com 
+                                            <br> rmun23.unhrc@gmail.com 
+                                            <br> rmun23.ls@gmail.com
+                                            <br> rmun23.disec@gmail.com 
+                                            <br> rmun23.ipc@gmail.com     
                 
                                         </td>
                                     </tr>
