--- a/eb.html
+++ b/eb.html
@@ -66,7 +66,7 @@
 					<div class="container">
 						
 						<header class="major">
-							<center><a href="#" class="image fit"><img src="./images/logo 2023.png" style="border-radius: 50%; width: 20em; height: 20em; border: 2px solid rgb(255, 255, 255) !important;" alt=""/></a></center>
+							<center><a href="#" class="image fit"><img src="./images/logo 2023.png" style="border-radius: 50%;border-color : #FFC400 ; width: 20em; height: 20em; border: 2px solid rgb(255, 255, 255) !important;" alt=""/></a></center>
 							<h2>SECRETARIAT</h2>
 						</header>
 
