--- a/credits.html
+++ b/credits.html
@@ -67,35 +67,13 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<center><a href="#" class="image fit"><img src="logo.png" style="border-radius: 50%; width: 15em; height: 15em; border: 2px solid gold !important;" alt=""/></a></center>
+							<center><a href="#" class="image fit"><img src="./images/logo 2023.png" style="border-radius: 50%; width: 15em; height: 15em; border: 2px solid gold !important;" alt=""/></a></center>
 							<h2>TECH-TEAM</h2>
 						</header>
 
 						<!-- Content -->
 							<section id="content">
-								<article>
-									<a >
-										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/ara.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
-											<p>
-												<h1 style="font: 1em sans-serif;  color:white">HEAD OF TECH</h1>
-												<p style = "font: 2em perpetua; color: white;">Aravind Sreenath</p> 
-											</p>
-										</div>
-									</a>
-		
-								</article>
-								<article>
-									<a >
-										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/aniii copy 2.png" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
-											<p>
-												<p style = "font: 2em perpetua; color: white;">Anirudh M</p> 
-											</p>
-										</div>
-									</a>
-		
-								</article>
+
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
@@ -107,17 +85,7 @@
 									</a>
 									
 								</article>
-								<article>
-									<a >
-										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/tarunK.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
-											<p>
-												<p style = "font: 2em perpetua; color: white;">Tarun K</p> 
-											</p>
-										</div>
-									</a>
-		
-								</article>
+
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
