--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ setInterval('updateTimer()', 1000);
 								<div class="col-4 col-12-medium">
 									<header>
 										<h2><img src="images/npslogo.png" alt="" /><br>WHAT IS R-NPSMUN</h2>
-										<p style="font-size: 26px;">NPS Rajajinagar proudly presents the sixth edition of R-NPSMUN!</p>
+										<p style="font-size: 26px;">NPS Rajajinagar proudly presents the seventh edition of R-NPSMUN!</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium" style="font-size: 26px;">
