--- a/disec.html
+++ b/disec.html
@@ -92,7 +92,7 @@ strength to unite when faced with the consequences of the dark side of science?
 									<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
-						Bio-weaponry in the new socio-political climate
+						Emerging Technologies and Arms Control 
 					</p>
 
 								</div>
