--- a/unsc.html
+++ b/unsc.html
@@ -94,7 +94,7 @@ and punish war crimes?
 									<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
-						Russia Ukraine crisis 
+						Addressing The Conflict in the South-China Sea 
 					</p>
 
 								</div>
